# Lstspline

./: LICENSE  pyproject.toml  setup.py
src/lstspline/: ToyClass.cpp  ToyClass.hpp  ToyClass_Wrapper.cpp  ToyClass_Wrapper.h  __init__.py  _toyclass.pyd  build.py  interface.py
tests/: test_ToyClass.py
